--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-14.44MB/s(Youtube:不良林), server: 183.232.141.117, port: 559, type: ssr, cipher: chacha20-ietf, password: mblank1port, protocol: auth_aes128_md5, obfs: plain, protocol-param: 30999:LLLLiikk988iu, obfs-param: dC5tZS92cG5oYXQ}
-  - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-250.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-463.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-17.36MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: c599e33c-e881-4cb5-87a7-a6e3711879e2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
+  - {name: 🇨🇳 中国-441.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-5.60MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-1018.9KB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: 129.159.33.199, port: 45328, type: vmess, uuid: 842c33ff-31b5-410c-a96e-0cb52a99a6da, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.159.33.199}}
   - {name: 🇳🇱 荷兰-389.4KB/s(Youtube:不良林), server: 23.94.120.19, port: 28554, type: vmess, uuid: 4a4c96c5-7b8b-4612-c715-6b91a9c34d07, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇮🇳 印度-2.03MB/s(Youtube:不良林), server: in.do.cl0udf1are.cf, port: 80, type: vmess, uuid: 389ba207-e732-4c63-b895-5862b3e4dad7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /aries, ws-headers: {Host: in.do.cl0udf1are.cf}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-14.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-14.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-14.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-14.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-14.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-14.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-14.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
