--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-441.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-5.60MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-1018.9KB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-152.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-441.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-278.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: 129.159.33.199, port: 45328, type: vmess, uuid: 842c33ff-31b5-410c-a96e-0cb52a99a6da, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.159.33.199}}
   - {name: 🇳🇱 荷兰-389.4KB/s(Youtube:不良林), server: 23.94.120.19, port: 28554, type: vmess, uuid: 4a4c96c5-7b8b-4612-c715-6b91a9c34d07, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.03MB/s(Youtube:不良林), server: in.do.cl0udf1are.cf, port: 80, type: vmess, uuid: 389ba207-e732-4c63-b895-5862b3e4dad7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /aries, ws-headers: {Host: in.do.cl0udf1are.cf}}
-  - {name: 🇺🇸 美国-5.82MB/s(Youtube:不良林), server: rn1107.moonfree.top, port: 443, type: trojan, password: c599e33c-e881-4cb5-87a7-a6e3711879e2, sni: rn1107.moonfree.top, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.85MB/s(Youtube:不良林), server: in.do.cl0udf1are.cf, port: 80, type: vmess, uuid: 389ba207-e732-4c63-b895-5862b3e4dad7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /aries, ws-headers: {Host: in.do.cl0udf1are.cf}}
+  - {name: 🇺🇸 美国-6.02MB/s(Youtube:不良林), server: rn1107.moonfree.top, port: 443, type: trojan, password: c599e33c-e881-4cb5-87a7-a6e3711879e2, sni: rn1107.moonfree.top, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1018.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
