--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-152.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-441.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-278.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: 129.159.33.199, port: 45328, type: vmess, uuid: 842c33ff-31b5-410c-a96e-0cb52a99a6da, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.159.33.199}}
+  - {name: 🇨🇳 中国-4.33MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇳🇱 荷兰-389.4KB/s(Youtube:不良林), server: 23.94.120.19, port: 28554, type: vmess, uuid: 4a4c96c5-7b8b-4612-c715-6b91a9c34d07, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇮🇳 印度-1.85MB/s(Youtube:不良林), server: in.do.cl0udf1are.cf, port: 80, type: vmess, uuid: 389ba207-e732-4c63-b895-5862b3e4dad7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /aries, ws-headers: {Host: in.do.cl0udf1are.cf}}
   - {name: 🇺🇸 美国-6.02MB/s(Youtube:不良林), server: rn1107.moonfree.top, port: 443, type: trojan, password: c599e33c-e881-4cb5-87a7-a6e3711879e2, sni: rn1107.moonfree.top, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
