--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.33MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-389.4KB/s(Youtube:不良林), server: 23.94.120.19, port: 28554, type: vmess, uuid: 4a4c96c5-7b8b-4612-c715-6b91a9c34d07, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.85MB/s(Youtube:不良林), server: in.do.cl0udf1are.cf, port: 80, type: vmess, uuid: 389ba207-e732-4c63-b895-5862b3e4dad7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /aries, ws-headers: {Host: in.do.cl0udf1are.cf}}
-  - {name: 🇺🇸 美国-6.02MB/s(Youtube:不良林), server: rn1107.moonfree.top, port: 443, type: trojan, password: c599e33c-e881-4cb5-87a7-a6e3711879e2, sni: rn1107.moonfree.top, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-3.06MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇮🇩 印度尼西亚-2.00MB/s(Youtube:不良林), server: 103.136.19.182, port: 1443, type: ss, cipher: chacha20-ietf-poly1305, password: wvsX0}
+  - {name: 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
+  - {name: 🇯🇵 日本-7.86MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: c599e33c-e881-4cb5-87a7-a6e3711879e2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
+  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.06MB/s(Youtube:不良林)
+      - 🇮🇩 印度尼西亚-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.06MB/s(Youtube:不良林)
+      - 🇮🇩 印度尼西亚-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.06MB/s(Youtube:不良林)
+      - 🇮🇩 印度尼西亚-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.06MB/s(Youtube:不良林)
+      - 🇮🇩 印度尼西亚-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.06MB/s(Youtube:不良林)
+      - 🇮🇩 印度尼西亚-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.06MB/s(Youtube:不良林)
+      - 🇮🇩 印度尼西亚-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-389.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.06MB/s(Youtube:不良林)
+      - 🇮🇩 印度尼西亚-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
